[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/_Root.gd" type="Script" id=1]
[ext_resource path="res://Scripts/map.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/tooltip/tooltip_master.gd" type="Script" id=5]
[ext_resource path="res://Prefabs/upgrade/upgrade_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/Limit Break.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/lored/LORED Manager.tscn" type="PackedScene" id=9]
[ext_resource path="res://Styles/Master Theme.tres" type="Theme" id=11]
[ext_resource path="res://Sprites/tab/s1n.png" type="Texture" id=13]
[ext_resource path="res://Sprites/tab/t0.png" type="Texture" id=14]
[ext_resource path="res://Sprites/tab/s2.png" type="Texture" id=15]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Sprites/resources/liq.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Menu/Menu.png" type="Texture" id=19]
[ext_resource path="res://Prefabs/Menu.tscn" type="PackedScene" id=21]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
draw_center = false
border_width_bottom = 3
border_color = Color( 1, 0, 0.631373, 0.301961 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
draw_center = false
border_width_top = 3
border_color = Color( 1, 0, 0.631373, 0.301961 )
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=11]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.117188, 0.117188, 0.117188, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.0390625, 0.0390625, 0.0390625, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.352941, 0.352941, 0.352941, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.078125, 0.078125, 0.078125, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
draw_center = false

[sub_resource type="DynamicFont" id=10]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_vertical_guides_": [ 256.0 ]
}

[node name="map" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="LORED Manager" parent="." instance=ExtResource( 9 )]
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, -73 )
size_flags_vertical = 3

[node name="m" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="v" type="VBoxContainer" parent="m"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/separation = 0

[node name="top" type="MarginContainer" parent="m/v"]
margin_right = 1280.0
margin_bottom = 20.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="bg" type="Panel" parent="m/v/top"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 10.0
custom_styles/panel = SubResource( 1 )

[node name="h" type="HBoxContainer" parent="m/v/top"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 10.0
custom_constants/separation = 10

[node name="r" type="HBoxContainer" parent="m/v/top/h"]
margin_left = 1260.0
margin_right = 1260.0
size_flags_horizontal = 10

[node name="Bottom" type="HBoxContainer" parent="m/v"]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 20.0

[node name="Left" type="Panel" parent="m/v/Bottom"]
size_flags_horizontal = 0

[node name="Right" type="Panel" parent="m/v/Bottom"]
margin_left = 1280.0
margin_right = 1280.0
size_flags_horizontal = 10

[node name="bot" type="MarginContainer" parent="m/v"]
visible = false
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="bg" type="Panel" parent="m/v/bot"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 10.0
custom_styles/panel = SubResource( 8 )

[node name="h" type="HBoxContainer" parent="m/v/bot"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 10.0
custom_constants/separation = 10
alignment = 1

[node name="taq" type="HBoxContainer" parent="m/v/bot/h"]
margin_left = 1260.0
margin_right = 1260.0
size_flags_horizontal = 10
custom_constants/separation = 14
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lored texts" type="Node2D" parent="m"]

[node name="up_container" parent="m" instance=ExtResource( 6 )]
visible = false
margin_left = 402.0
margin_top = 160.0
margin_right = 877.0
margin_bottom = 560.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Menu" parent="m" instance=ExtResource( 21 )]
visible = false
margin_left = 401.0
margin_top = 210.0
margin_right = 879.0
margin_bottom = 510.0

[node name="misc" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Limit Break" parent="misc" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_left = 1111.0
margin_top = 10.0
margin_right = 1246.0
margin_bottom = 64.0

[node name="tabs" type="MarginContainer" parent="misc"]
margin_right = 73.0
margin_bottom = 160.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="v" type="VBoxContainer" parent="misc/tabs"]
margin_left = 10.0
margin_top = 10.0
margin_right = 63.0
margin_bottom = 150.0
custom_constants/separation = 10

[node name="menu" type="MarginContainer" parent="misc/tabs/v"]
margin_right = 53.0
margin_bottom = 32.0
size_flags_vertical = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="button" type="Button" parent="misc/tabs/v/menu"]
self_modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
margin_right = 53.0
margin_bottom = 32.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="MarginContainer" parent="misc/tabs/v/menu"]
margin_left = 10.0
margin_right = 42.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="icon" type="Panel" parent="misc/tabs/v/menu/m"]
margin_left = 4.0
margin_top = 4.0
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
custom_styles/panel = SubResource( 15 )

[node name="Sprite" type="Sprite" parent="misc/tabs/v/menu/m/icon"]
self_modulate = Color( 1, 0, 0.631373, 0.501961 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )
centered = false

[node name="shadow" type="Sprite" parent="misc/tabs/v/menu/m/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 19 )
centered = false

[node name="upgrades" type="Button" parent="misc/tabs/v"]
margin_top = 42.0
margin_right = 53.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="misc/tabs/v/upgrades"]
position = Vector2( 26, 20 )
texture = ExtResource( 13 )

[node name="1" type="Button" parent="misc/tabs/v"]
margin_top = 92.0
margin_right = 53.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="misc/tabs/v/1"]
position = Vector2( 26, 20 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="misc/tabs/v/1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.804688, 0.804688, 0.804688, 1 )
custom_fonts/font = SubResource( 10 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="misc/tabs/v"]
visible = false
margin_top = 50.0
margin_right = 53.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="misc/tabs/v/2"]
position = Vector2( 26, 20 )
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="misc/tabs/v/2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.804688, 0.804688, 0.804688, 1 )
custom_fonts/font = SubResource( 10 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="misc/tabs/v"]
visible = false
margin_top = 50.0
margin_right = 53.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="misc/tabs/v/3"]
position = Vector2( 26, 20 )
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="misc/tabs/v/3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.804688, 0.804688, 0.804688, 1 )
custom_fonts/font = SubResource( 10 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="misc/tabs/v"]
visible = false
margin_right = 53.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
mouse_default_cursor_shape = 2
theme = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="misc/tabs/v/4"]
position = Vector2( 26, 20 )
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="misc/tabs/v/4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.804688, 0.804688, 0.804688, 1 )
custom_fonts/font = SubResource( 10 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Off" type="Timer" parent="misc"]
one_shot = true

[node name="WishAnchor" type="Node2D" parent="."]
position = Vector2( 0, 720 )

[node name="m" type="MarginContainer" parent="WishAnchor"]
margin_top = -39.0
margin_right = 114.0
grow_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v" type="VBoxContainer" parent="WishAnchor/m"]
margin_left = 5.0
margin_top = 5.0
margin_right = 109.0
margin_bottom = 34.0
alignment = 2

[node name="random" type="VBoxContainer" parent="WishAnchor/m/v"]
margin_top = 25.0
margin_right = 104.0
margin_bottom = 25.0

[node name="main" type="VBoxContainer" parent="WishAnchor/m/v"]
margin_top = 29.0
margin_right = 104.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="texts" type="Node2D" parent="."]

[node name="global_tip" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_right = 25.0
margin_bottom = 27.0
mouse_default_cursor_shape = 16

[connection signal="pressed" from="misc/tabs/v/menu/button" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="misc/tabs/v/upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="misc/tabs/v/1" to="." method="_on_s1_pressed"]
[connection signal="pressed" from="misc/tabs/v/2" to="." method="_on_s2_pressed"]
[connection signal="pressed" from="misc/tabs/v/3" to="." method="_on_s3_pressed"]
[connection signal="pressed" from="misc/tabs/v/4" to="." method="_on_s2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
